--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <hearder>
         <div class="navbar">
+
             <div class="nav-logo border">
                 <div class="logo"></div>
             </div>
@@ -31,7 +32,63 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
+
+            <div class="nav-signin border">
+                <p><span class="nav-line1">Hello, sign in</span></p>
+                <p><span class="nav-line2">Account & Lists <select><option></option></select></span></p>
+            </div>
+
+            <div class="nav-return border">
+                <p><span class="nav-line1">Returns</span></p>
+                <p><span class="nav-line2">& Orders</span></p>
+            </div>
+
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <p><span class="nav-line2">Cart</span></p>
+            </div>
+        </div>
+
+
+        <div class="panel">
+            <div class="panel-all border">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+
+            <div class="panel-option">
+                 <p class="border">MX Player</p>
+                 <p class="border">Sell</p>
+                 <p class="border">Bestsellers</p>
+                 <p class="border">Today's Deals</p>
+                 <p class="border">Mobiles</p>
+                 <p class="border">Prime</p>
+                 <p class="border">Customer Service</p>
+                 <p class="border">New Releases</p>
+                 <p class="border">Fashion</p>
+                 <p class="border">Amazon Pay</p>
+                 <p class="border">Electronics</p>
+            </div>
+
         </div>
     </hearder>
+
+    <main>
+        <div class="hero-section">
+            <div class="hero-mess">
+                <p>You are on Amazon.com. You can also shop on Amazon India for millions of product with fast local delivery.</p>
+            </div>
+        </div>
+
+        <div class="shop-section">
+            <div class="Box1 Box">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image: url(box1_image.jpg);"></div>
+            </div>
+            <div class="Box2 Box"></div>
+            <div class="Box3 Box"></div>
+            <div class="Box4 Box"></div>
+        </div>
+    </main>
 </body>
 </html>
