--- a/index.html
+++ b/index.html
@@ -81,14 +81,121 @@
         </div>
 
         <div class="shop-section">
-            <div class="Box1 Box">
-                <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url(box1_image.jpg);"></div>
+            <div class="Box">
+                <div class="box-content">
+                    <h2>Colthes</h2>
+                <div class="box-img" style="background-image: url(box1_image.jpg)"></div>
+                <p>Shop Now</p>
+                </div>
             </div>
-            <div class="Box2 Box"></div>
-            <div class="Box3 Box"></div>
-            <div class="Box4 Box"></div>
+            <div class="Box">
+                <div class="box-content">
+                    <h2>Health & Personal Care</h2>
+                <div class="box-img" style="background-image: url(box2_image.jpg)"></div>
+                <p>Shop Now</p>
+                </div>
+            </div>
+            <div class="Box">
+                <div class="box-content">
+                    <h2>Home & Furniture</h2>
+                <div class="box-img" style="background-image: url(box3_image.jpg)"></div>
+                <p>Shop Now</p>
+                </div>
+            </div>
+            <div class="Box">
+                <div class="box-content">
+                    <h2>Electronic & Mobiles</h2>
+                <div class="box-img" style="background-image: url(box4_image.jpg)"></div>
+                <p>Shop Now</p>
+                </div>
+            </div>
+            <div class="Box">
+                <div class="box-content">
+                    <h2>Beauty Picks</h2>
+                <div class="box-img" style="background-image: url(box5_image.jpg)"></div>
+                <p>Shop Now</p>
+                </div>
+            </div>
+            <div class="Box">
+                <div class="box-content">
+                    <h2>Pet Care</h2>
+                <div class="box-img" style="background-image: url(box6_image.jpg)"></div>
+                <p>Shop Now</p>
+                </div>
+            </div>
+            <div class="Box">
+                <div class="box-content">
+                    <h2>New Arrivals in Toys</h2>
+                <div class="box-img" style="background-image: url(box7_image.jpg)"></div>
+                <p>Shop Now</p>
+                </div>
+            </div>
+            <div class="Box">
+                <div class="box-content">
+                    <h2>Discover Fashion Trends</h2>
+                <div class="box-img" style="background-image: url(box8_image.jpg)"></div>
+                <p>Shop Now</p>
+                </div>
+            </div>
         </div>
     </main>
+
+    <footer>
+        <div class="foot-panel1">
+            Back To Top
+        </div>
+
+        <div class="foot-panel2">
+            <ul>
+                <p>Get to Know Us</p>
+                <a>About Amazon</a>
+                <a>Careers</a>
+                <a>Press Releases</a>
+                <a>Amazon Science</a>
+            </ul>
+            <ul>
+                <p>Make Money with Us</p>
+                <a>Sell products on Amazon</a>
+                <a>Sell on Amazon Business</a>
+                <a>Sell apps on Amazon</a>
+                <a>Become an Affiliate</a>
+            </ul>
+            <ul>
+                <p>Amazon Payment Products</p>
+                <a>Amazon Business Card</a>
+                <a>Shop with Points</a>
+                <a>Reload Your Balance</a>
+                <a>Amazon Currency Converter</a> 
+            </ul> 
+            <ul>
+                <p>Let Us Help You</p>
+                <a>Your Account</a>
+                <a>Your Orders</a>
+                <a>Shipping Rates & Policies</a>
+                <a>Returns & Replacements</a>
+                <a>Your Account</a>
+                <a>Returns Centre</a>
+                <a>Recalls and Product Safety Alerts</a>
+                <a>100% Purchase Protection</a>
+                <a>Amazon App Download</a>
+                <a>Help</a>
+            </ul>    
+        </div>
+
+        <div class="foot-panel3">
+            <div class="logo"></div>
+        </div>
+
+        <div class="foot-panel4">
+            <div class="pages">
+            <a>Conditions of Use & Sale</a>
+            <a>Privacy Notice</a>
+            <a>Interest-Based Ads</a>
+            </div>
+            <div class="copyright">
+            © 1996-2025, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
